@@ -161,6 +161,7 @@
     * 3799 agent_netapp: No longer requires the files NaServer/NaElements. Reduced CPU usage by 2/3...
     * 3872 mcafee_webgateway, mcafee_webgateway_misc: new checks which monitor some statistics of McAfee web gateway devices
     * 3883 kentix_humidity, kentix_temp: Added support of MultiSensor-LAN and MultiSensor-RACK
+    * 3803 netapp_api_connection: reports any errors happened during the collection of data...
     * 3073 FIX: windows agent: relative paths to mrpe scripts are now treated as relative to the agent installation directory...
     * 3061 FIX: mk_jolokia: Fixed debugging of the agent plugin
     * 3074 FIX: windows agent: fixed incorrect values for 32-bit performance counters
